--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-streamlit
-obspy
-pandas
-numpy
-scipy
-plotly
-google-genai
-python-dotenv
-watchdog
+streamlit==1.53.0
+obspy==1.4.2
+pandas==2.3.3
+numpy==2.4.1
+plotly==6.5.2
+google-genai==1.59.0
+python-dotenv==1.2.1
